fixed: overflowing elements

--- a/MaogmangBelly/resources/css/app.css
+++ b/MaogmangBelly/resources/css/app.css
@@ -147,8 +147,8 @@ img.slider-img {
 
 .border1 {
     position: absolute;
-    width: 1337px;
-    height: 549px;
+    width: 80vw;
+    height: 90vh;
     left: 151px;
     top: 293px;
 }
